--- a/index.html
+++ b/index.html
@@ -29,7 +29,28 @@
                 <div class="image-placeholder">this is a placeholder for an image</div>
             </div>
         </div>
+        <div class="illustration-container">
+            <h2>Some random information.</h2>
+            <div class="small-illustration-container">
+                <div>
+                    <div class="illustration-box"></div>
+                    <p class="illustration-subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustration-box"></div>
+                    <p class="illustration-subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustration-box"></div>
+                    <p class="illustration-subtext">this is some subtext under an illustration or image</p>
+                </div>
+                <div>
+                    <div class="illustration-box"></div>
+                    <p class="illustration-subtext">this is some subtext under an illustration or image</p>
+                </div>
+            </div>
 
+        </div>
     </body>
 
 </html>
