--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <div class="top-container">
                 <div class="top-left-container">
                     <h1>This website is awesome</h1>
-                    <p class="title-subtext">This website has some subtext that goes here under the main title. It's a smaller 
-                    font and the color is lower contrast.
+                    <p class="title-subtext">This website has some subtext that goes here under the main 
+                        title. It's a smaller font and the color is lower contrast.
                     </p>
                     <button>Sign up</button>
                 </div>
@@ -50,6 +50,13 @@
                 </div>
             </div>
 
+        </div>
+        <div class="quote-section">
+            <p class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's 
+                just filling up space, or maybe people will actually read it. Who knows? All I know is 
+                that it looks nice.</em>
+            </p>
+            <p class="quote-author">-Thor, God of Thunder</p>
         </div>
     </body>
 
