--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                     <p class="illustration-subtext">this is some subtext under an illustration or image</p>
                 </div>
             </div>
-
         </div>
         <div class="quote-section">
             <p class="quote"><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's 
@@ -58,6 +57,16 @@
             </p>
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
+        <div class="action-footer">
+            <div class="action-container">
+                <div>
+                    <div class="action-white">Call to action it's time!</div>
+                    <div class="action-gray">Sign up for our product by clicking that button right over 
+                        there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="footer">Copyright © The Odin Project 2021</div>
     </body>
-
 </html>
